[gd_scene load_steps=29 format=2]

[ext_resource path="res://project/assets/Bookshelf.png" type="Texture" id=1]
[ext_resource path="res://project/assets/woodTiles.png" type="Texture" id=2]
[ext_resource path="res://project/src/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://project/assets/CrackedMirror.png" type="Texture" id=4]
[ext_resource path="res://project/assets/Cupboard1.png" type="Texture" id=5]
[ext_resource path="res://project/assets/Couch.png" type="Texture" id=6]
[ext_resource path="res://project/assets/SmallTable.png" type="Texture" id=7]
[ext_resource path="res://project/src/Level-2.gd" type="Script" id=8]
[ext_resource path="res://project/assets/Apple+TreePaint.png" type="Texture" id=9]
[ext_resource path="res://project/assets/HairPaint.png" type="Texture" id=10]
[ext_resource path="res://project/assets/PathPaint.png" type="Texture" id=11]
[ext_resource path="res://project/assets/fonts/retro_computer_personal_use.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://project/assets/fonts/CryptCreep BB_reg.ttf" type="DynamicFontData" id=13]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.283871, 0.580645, 0.870968 )
colors = PoolColorArray( 0.0666667, 0.0666667, 0.0666667, 1, 0.168627, 0.168627, 0.168627, 1, 0.317647, 0.317647, 0.317647, 1, 0.741176, 0.741176, 0.741176, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="TileSet" id=3]
5/name = "HairPaint.png 5"
5/texture = ExtResource( 10 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 32, 0, 96, 64 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "HairPaint.png 6"
6/texture = ExtResource( 10 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 32, 64, 96, 64 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "Apple+TreePaint.png 7"
7/texture = ExtResource( 9 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 0, 0, 64, 64 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "CrackedMirror.png 8"
8/texture = ExtResource( 4 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 0, 0, 64, 64 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "CrackedMirror.png 9"
9/texture = ExtResource( 4 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 0, 32, 64, 64 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "CrackedMirror.png 10"
10/texture = ExtResource( 4 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 0, 64, 64, 32 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0
11/name = "PathPaint.png 11"
11/texture = ExtResource( 11 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 0, 0, 64, 32 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape_one_way = false
11/shape_one_way_margin = 0.0
11/shapes = [  ]
11/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 160, 0, 160, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 41.1249, 64, 41.1249, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 96, 0, 96, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 53, 96, 54, 96, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 8.02783, 128, 8.02783, 128, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 0, 32, 64, 32, 64, 64, 0, 64 )

[sub_resource type="TileSet" id=10]
6/name = "Cupboard1.png 6"
6/texture = ExtResource( 5 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 64, 96, 64 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape = SubResource( 6 )
6/shape_one_way = false
6/shape_one_way_margin = 1.0
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
6/z_index = 0
7/name = "Cupboard1.png 7"
7/texture = ExtResource( 5 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 0, 0, 96, 64 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape = SubResource( 7 )
7/shape_one_way = false
7/shape_one_way_margin = 1.0
7/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
7/z_index = 0
8/name = "Couch.png 8"
8/texture = ExtResource( 6 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 0, 64, 128, 64 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape = SubResource( 8 )
8/shape_one_way = true
8/shape_one_way_margin = 1.0
8/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": true,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
8/z_index = 0
9/name = "SmallTable.png 9"
9/texture = ExtResource( 7 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 0, 0, 64, 64 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape = SubResource( 9 )
9/shape_one_way = true
9/shape_one_way_margin = 1.0
9/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": true,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
9/z_index = 0
10/name = "woodTiles.png 10"
10/texture = ExtResource( 2 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 0, 0, 160, 64 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape = SubResource( 4 )
10/shape_one_way = false
10/shape_one_way_margin = 1.0
10/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
10/z_index = 0
11/name = "Bookshelf.png 11"
11/texture = ExtResource( 1 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 0, 64, 64, 64 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape_one_way = false
11/shape_one_way_margin = 0.0
11/shapes = [  ]
11/z_index = 0
12/name = "Bookshelf.png 12"
12/texture = ExtResource( 1 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 0, 0, 64, 64 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shape_offset = Vector2( 0, 0 )
12/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
12/shape = SubResource( 5 )
12/shape_one_way = true
12/shape_one_way_margin = 1.0
12/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": true,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
12/z_index = 0

[sub_resource type="DynamicFont" id=11]
size = 40
extra_spacing_bottom = 20
font_data = ExtResource( 13 )

[sub_resource type="SegmentShape2D" id=12]
b = Vector2( 815.971, -0.225037 )

[sub_resource type="DynamicFont" id=13]
size = 50
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=14]
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=15]
font_data = ExtResource( 12 )

[node name="Level-2" type="Node2D"]
script = ExtResource( 8 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_top = 700.0
margin_right = 1325.0
margin_bottom = 1340.0
rect_rotation = -90.0
texture = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TileMap" parent="."]
tile_set = SubResource( 3 )
format = 1

[node name="Floor" type="TileMap" parent="."]
tile_set = SubResource( 10 )
format = 1
tile_data = PoolIntArray( 655360, 8, 0, 655362, 8, 0, 655364, 8, 0, 655366, 8, 0, 655368, 8, 0 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 38.64, 578.416 )

[node name="IntroPopup" type="Popup" parent="."]
margin_left = 154.597
margin_top = 316.329
margin_right = 194.597
margin_bottom = 356.329
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IntroBackground" type="ColorRect" parent="IntroPopup"]
margin_left = -8.0
margin_top = -10.0
margin_right = 343.0
margin_bottom = 48.0
color = Color( 0.0509804, 0.254902, 0, 1 )

[node name="IntroLabel" type="Label" parent="IntroPopup"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 11 )
text = "Watch out for falling schoolwork!!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinLine" type="Area2D" parent="."]
position = Vector2( 0, -80 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WinLine"]
position = Vector2( -70.1634, -491.142 )
shape = SubResource( 12 )

[node name="GameOverHUD" type="MarginContainer" parent="."]
visible = false
margin_left = 148.0
margin_top = 242.0
margin_right = 501.0
margin_bottom = 339.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverHUD"]
margin_right = 353.0
margin_bottom = 97.0

[node name="GameOverLabel" type="Label" parent="GameOverHUD/VBoxContainer"]
margin_right = 353.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0.74902, 0, 0, 1 )
text = "GAME OVER"

[node name="HBoxContainer" type="HBoxContainer" parent="GameOverHUD/VBoxContainer"]
margin_top = 69.0
margin_right = 353.0
margin_bottom = 97.0
alignment = 1

[node name="RetryButton" type="Button" parent="GameOverHUD/VBoxContainer/HBoxContainer"]
margin_left = 52.0
margin_right = 175.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 14 )
text = "Try Again"

[node name="MainMenuButton" type="Button" parent="GameOverHUD/VBoxContainer/HBoxContainer"]
margin_left = 179.0
margin_right = 301.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 15 )
text = "Main Menu"

[node name="WinHUD" type="MarginContainer" parent="."]
visible = false
margin_left = 63.0
margin_top = 240.0
margin_right = 584.0
margin_bottom = 337.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="WinHUD"]
margin_right = 521.0
margin_bottom = 97.0

[node name="WinLabel" type="Label" parent="WinHUD/VBoxContainer"]
margin_right = 521.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0, 0.74902, 0.027451, 1 )
text = "LEVEL CLEARED"

[node name="HBoxContainer" type="HBoxContainer" parent="WinHUD/VBoxContainer"]
margin_top = 69.0
margin_right = 521.0
margin_bottom = 97.0
alignment = 1

[node name="BacktoMainButton" type="Button" parent="WinHUD/VBoxContainer/HBoxContainer"]
margin_left = 155.0
margin_right = 366.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 15 )
text = "Back to Main Menu"
[connection signal="body_shape_entered" from="WinLine" to="." method="_on_WinLine_body_shape_entered"]
[connection signal="pressed" from="GameOverHUD/VBoxContainer/HBoxContainer/RetryButton" to="." method="_on_RetryButton_pressed"]
[connection signal="pressed" from="GameOverHUD/VBoxContainer/HBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="WinHUD/VBoxContainer/HBoxContainer/BacktoMainButton" to="." method="_on_MainMenuButton_pressed"]
